--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat vel, laboriosam dolorem perferendis illo neque facere vitae deleniti animi dignissimos quibusdam ex quidem aliquam repellat quo id commodi ratione ullam cupiditate odit praesentium? Earum excepturi laboriosam, vel nemo dicta nihil!</p>
                         </div>
                         <div class="col-md-6">
-                            <img src="img/burger1.png" class="img-fluid" alt="">
+                            <img src="img/carusel.png" class="img-fluid" alt="">
                         </div>
                     </div> 
                 </div>       
@@ -201,7 +201,6 @@
                             <h5>Reservation</h5>
                             <h1>Book your table</h1>
                         </div>
-                    </div>
                     <form action="" class="pt-5">
                             <div class="row">
                                 <div class="col-md-6">
@@ -228,6 +227,7 @@
                                 </div>
                             </div>
                     </form>
+                     </div>
                 </div>
             </div>
         </div>
