--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     <div class="burger1_img">
                         <img src="img/burger1.png" class="img-fluid" alt="">
                     <div class="burger1_content">
-                        <h6>Try it today</h6>
-                        <h5>Most Popular Burger</h5>
+                        <h5>Try it today</h5>
+                        <h6>Most Popular Burger</h6>
                     </div>
                     </div>
                 </div>
@@ -162,9 +162,9 @@
         </div>
     </section>
 
-    <section class="slide">
+    <section class="slide shadow borderd">
             <div class="owl-carousel">
-                <div class="container slide_shadow">
+                <div class="container p-5">
                     <div class="row">
                         <div class="col-md-6">
                             <h5>Discover</h5>
@@ -177,7 +177,7 @@
                     </div> 
                 </div> 
 
-                <div class="container slide_shadow">
+                <div class="container p-5">
                     <div class="row">
                         <div class="col-md-6">
                             <h5>Discover</h5>
@@ -196,7 +196,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 m-auto form_padding">
-                    <div class="row">
+                    <div class="row form_row">
                         <div class="col-md-8 m-auto text-center">
                             <h5>Reservation</h5>
                             <h1>Book your table</h1>
@@ -212,10 +212,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <input type="text" placeholder="DATE" class="form-control mb-2" required>
+                                    <input type="date" placeholder="DATE" class="form-control mb-2" required>
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="text" placeholder="TIME" class="form-control mb-2" required>
+                                    <input type="time" placeholder="TIME" class="form-control mb-2" required>
                                 </div>
                             </div>
                             <div class="row">
@@ -246,7 +246,7 @@
                         <h6>Company name 2020 all is bangladesh</h6>
                     </div>
                 </div>
-                <div class="col-md-6 m-auto text-end">
+                <div class="col-md-6 m-auto">
                     <div class="footer_content2">
                         <h4><i class="fas fa-map-marker-alt"></i> Main Road, Building Name, Country </h4>
                         <h5><i class="far fa-envelope"></i> info@companyname.com </h5>
